apply plugin: 'java-library'
apply plugin: 'java'
apply plugin: 'war'

sourceCompatibility = 10
targetCompatibility = 10

repositories {
    jcenter()
}

dependencies {

	compile 'org.springframework:spring-webmvc:5.0.9.RELEASE'
	compile 'org.springframework:spring-context-support:5.0.9.RELEASE'
	compile 'org.springframework:spring-aop:5.0.9.RELEASE'
	compile 'org.springframework:spring-beans:5.0.9.RELEASE'
	compile 'org.springframework:spring-core:5.0.9.RELEASE'

	compile 'org.apache.poi:poi:4.0.0'
	compile 'org.apache.poi:poi-ooxml:4.0.0'

	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

}

